removing redundant single process

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,11 @@
 
 params {
-
+    subset_bam_to_comon_variants= true
+    cell_data="None"
   // Nf core integration 
     custom_config_version      = 'master'
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-
-
+  sample_name='hadge_process'
   outdir = "${launchDir}/results"
   mode = "rescue"
   generate_anndata = "True"
@@ -395,15 +395,21 @@ profiles {
             // queue = ...
             // clusterOptions =  ...
 	        withLabel: big_mem {
-                cpus = 32
-                memory = 150.GB
+                cpus = 16
+                memory = {30.GB * task.attempt}
                 time =24.h
             }
             withLabel: small_mem {
-                cpus = 16
-                memory = 100.GB
+                cpus = 6
+                memory = {20.GB * task.attempt}
                 time =24.h
             }
+
+
+            withName: subset_bam_to_comon_variants{
+                cpus = 2
+                memory = {20.GB * task.attempt}
+            }            
 
             withName: summary{
                 cpus = 1
