--- a/conda/bff.yml
+++ b/conda/bff.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - conda-forge::r-tidyverse
   - conda-forge::r-base>=4.2
   - r-seurat
   - bioconductor-dropletutils
@@ -17,3 +18,4 @@ dependencies:
   - conda-forge::r-here
   - conda-forge::r-argparse
   - conda-forge::r-dplyr
+
