--- a/nextflow.config
+++ b/nextflow.config
@@ -399,7 +399,7 @@ profiles {
     }
     conda {
         conda.enabled          = true
-        docker.enabled         = false
+        docker.enabled         = true
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
