--- a/test.config
+++ b/test.config
@@ -25,5 +25,7 @@ params {
   ignore = "True"
   //gmm_demux input
   hto_name_gmm = "hto_1,hto_2"
+  //bff 
+  methodsForConsensus ="bff_raw,bff_cluster"
 
 }
