param gmm demux

--- a/test.config
+++ b/test.config
@@ -25,6 +25,7 @@ params {
   ignore = "True"
   //gmm_demux input
   hto_name_gmm = "hto_1,hto_2"
+  mode_GMM = "tsv"
   //bff 
   methodsForConsensus ="bff_raw,bff_cluster"
 
