--- a/conda/demuxem_py.yml
+++ b/conda/demuxem_py.yml
@@ -4,8 +4,9 @@ channels:
 dependencies:
   - python=3.9
   - pegasuspy
+  - scanpy
+  - bioconda::demuxem
   - pip
   - pip:
       - pandas<2.0
-      - demuxEM
       - argparse
