--- a/nextflow_internal.config
+++ b/nextflow_internal.config
@@ -430,7 +430,7 @@ profiles {
     }
     conda {
         conda.enabled          = true
-        docker.enabled         = false
+        docker.enabled         = true
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
