fix for summary

--- a/nextflow_internal.config
+++ b/nextflow_internal.config
@@ -110,7 +110,7 @@ params {
   runEmptyDrops = "True"
   
   // demuxem
-  demuxem = "False"
+  demuxem = "True"
   rna_matrix_demuxem = "raw"
   hto_matrix_demuxem = "raw"
   threads_demuxem = 2
@@ -143,7 +143,7 @@ params {
   hto_matrix_bff = "raw"
   assignmentOutBff = "bff" 
   methods = "combined_bff"
-  methodsForConsensus = 'NULL'
+  methodsForConsensus = "bff_raw,bff_cluster"
   cellbarcodeWhitelist = 'NULL'
   metricsFile = 'metrics_bff.csv'
   doTSNE = "True"
