summary error remains, saving progress

--- a/nextflow_internal.config
+++ b/nextflow_internal.config
@@ -24,7 +24,7 @@ params {
   gene_col = 2 
   
   // htodemux
-  htodemux = "False"
+  htodemux = "True"
   rna_matrix_htodemux = "filtered"
   hto_matrix_htodemux = "filtered"
   quantile_htodemux = "0.99"
@@ -56,7 +56,7 @@ params {
   heatmapNcells= 500
   
   // multiseq
-  multiseq = "False"
+  multiseq = "True"
   rna_matrix_multiseq = "filtered"
   hto_matrix_multiseq = "filtered"
   quantile_multi = 0.7
@@ -70,7 +70,7 @@ params {
   assignmentOutMulti = "multiseq"
   
   // hashsolo
-  hashsolo = "False"
+  hashsolo = "True"
   hto_matrix_hashsolo = "raw"
   rna_matrix_hashsolo = "raw"
   use_rna_data = "False"
@@ -129,7 +129,7 @@ params {
   gmmDemux = "True"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
-  hto_name_gmm = "None"
+  hto_name_gmm = "hto_1,hto_2"
   summary = 2000
   report_gmm = "report.txt"
   mode_GMM = "tsv"
