htodemux and multiseq solved, problem with gmmdemux

--- a/nextflow_internal.config
+++ b/nextflow_internal.config
@@ -126,7 +126,7 @@ params {
   filter_demuxem = "False"
 
   // gmm-demux
-  gmmDemux = "True"
+  gmmDemux = "False"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "hto_1,hto_2"
@@ -247,7 +247,7 @@ params {
   souporcell_out = "souporcell_out"
   
   // scSplit
-  scSplit = "True"
+  scSplit = "False"
   scSplit_preprocess = "False"
   scSplit_variant = "True"
   refscSplit = "ref_filtered.csv"
@@ -399,13 +399,13 @@ profiles {
            withName:hash_solo{
                 conda = "/Users/mylenemarianagonzalesandre/miniconda3_x86/envs/hashsolo_py"
             }
-            withName: demuxem{
+            withName:demuxem{
                 conda = "/Users/mylenemarianagonzalesandre/miniconda3_x86/envs/demuxem_py"
             }
             withName:gmm_demux{
                 conda = "/Users/mylenemarianagonzalesandre/miniconda3_x86/envs/gmm_demux"
             }
-            withName: summary{
+            withName:summary{
                 conda = "/Users/mylenemarianagonzalesandre/miniconda3_x86/envs/summary"
             }
 
