gmmDemux error with summary solved

--- a/nextflow_internal.config
+++ b/nextflow_internal.config
@@ -126,7 +126,7 @@ params {
   filter_demuxem = "False"
 
   // gmm-demux
-  gmmDemux = "False"
+  gmmDemux = "True"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "hto_1,hto_2"
