--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 name: hadge test workflow
 on:
   push:
+    branches: [main]
   pull_request:
+    branches: [main]
+
 jobs:
   test_genetic:
     name: Run pipeline in genetic mode with test data
