--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         run: bash ${GITHUB_WORKSPACE}/test_data/download_data.sh
       - name: Run pipeline with test data
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,conda --mode genetic --souporcell False --generate_anndata False
+          nextflow run ${GITHUB_WORKSPACE} -profile test,conda --mode genetic --souporcell False --scsplit False --generate_anndata False
   test_hashing:
     name: Run pipeline in hashing mode with test data
     runs-on: ubuntu-latest
