Fix top-level structure bugs

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     // Input options
     input                      = null
     mode                       = 'rescue'
+    match_donor                = false
 
     // References
     genome                     = null
