--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,8 @@ params {
     input                      = null
     mode                       = 'rescue'
     match_donor                = false
+    hash_tools                 = 'gmm-demux'
+    genetic_tools              = 'vireo'
 
     // References
     genome                     = null
