Pass methods to subworkflows

--- a/conf/test.config
+++ b/conf/test.config
@@ -24,5 +24,5 @@ params {
 
     // Input data
     input  = '/home/nico/Software/nf-core/hadge/data/samplesheet.csv'
-    mode = 'genetic'
+    mode = 'hashing'
 }
