--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,6 +22,10 @@ process {
         ext.args = '--field GT'
     }
 
+    withName: CELLSNP_MODEA {
+        ext.args = '--genotype'
+    }
+
     withName: MULTIQC {
         ext.args   = { params.multiqc_title ? "--title \"${params.multiqc_title}\"" : '' }
         publishDir = [
