Implement BAM QC

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,19 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
     ]
 
+    withName: SAMTOOLS_VIEW {
+        ext.args = '-S -b -q 10 -F 3844'
+    }
+
+    withName: UMITOOLS_DEDUP {
+        ext.prefix = { "${meta.id}_dedup" }
+        ext.args = '--extract-umi-method=tag --umi-tag=UR --cell-tag=CB'
+    }
+
+    withName: SAMTOOLS_SORT {
+        ext.prefix = { "${meta.id}_sorted" }
+    }
+
     withName: POPSCLE_DEMUXLET {
         ext.args = '--field GT'
     }
