--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     match_donor                = false
     hash_tools                 = 'gmm-demux'
     genetic_tools              = 'vireo'
+    bam_qc                     = true
 
     // References
     genome                     = null
