Implement BAM subsetting to common variants

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ params {
     hash_tools                 = 'gmm-demux'
     genetic_tools              = 'vireo'
     bam_qc                     = true
+    common_variants            = null
 
     // References
     genome                     = null
