Update outdir structure

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -19,24 +19,120 @@ process {
     ]
 
     withName: SAMTOOLS_VIEW {
-        ext.args = '-S -b -q 10 -F 3844'
+        ext.args   = '-S -b -q 10 -F 3844'
+        publishDir = [
+            enabled: false
+        ]
+    }
+
+    withName: SAMTOOLS_INDEX {
+        publishDir = [
+            enabled: false
+        ]
     }
 
     withName: UMITOOLS_DEDUP {
         ext.prefix = { "${meta.id}_dedup" }
-        ext.args = '--extract-umi-method=tag --umi-tag=UR --cell-tag=CB'
+        ext.args   = '--extract-umi-method=tag --umi-tag=UR --cell-tag=CB'
+        publishDir = [
+            enabled: false
+        ]
     }
 
     withName: SAMTOOLS_SORT {
         ext.prefix = { "${meta.id}_sorted" }
+        publishDir = [
+            path: { "${params.outdir}/genetic/bam_qc/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_intermediates,
+        ]
     }
 
-    withName: POPSCLE_DEMUXLET {
-        ext.args = '--field GT'
+    withName: FILTER_BAM {
+        publishDir = [
+            path: { "${params.outdir}/genetic/bam_common_variants/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_intermediates,
+        ]
     }
 
     withName: CELLSNP_MODEA {
         ext.args = '--genotype'
+        publishDir = [
+            path: { "${params.outdir}/genetic/vireo/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: VIREO {
+        publishDir = [
+            path: { "${params.outdir}/genetic/vireo/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: POPSCLE_DSCPILEUP {
+        publishDir = [
+            path: { "${params.outdir}/genetic/popscle/dscpileup/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_intermediates
+        ]
+    }
+
+    withName: POPSCLE_DEMUXLET {
+        ext.args = '--field GT'
+        publishDir = [
+            path: { "${params.outdir}/genetic/popscle/demuxlet/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: POPSCLE_FREEMUXLET {
+        publishDir = [
+            path: { "${params.outdir}/genetic/popscle/freemuxlet/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: MTXCONVERT_RNA {
+        publishDir = [
+            path: { "${params.outdir}/hashing/mtxconvert/rna/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_intermediates
+        ]
+    }
+
+    withName: MTXCONVERT_HTO {
+        publishDir = [
+            path: { "${params.outdir}/hashing/mtxconvert/hto/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_intermediates
+        ]
+    }
+
+    withName: DEMUXEM {
+        publishDir = [
+            path: { "${params.outdir}/hashing/demuxem/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: GMMDEMUX {
+        publishDir = [
+            path: { "${params.outdir}/hashing/gmm-demux/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     withName: MULTIQC {
