--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,7 @@ params {
     genetic_tools              = 'vireo'
     bam_qc                     = true
     common_variants            = null
+    save_intermediates         = false
 
     // References
     genome                     = null
