Add all demuxem optional parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -59,11 +59,11 @@ process {
     }
 
     withName: CELLSNP_MODEA {
-        ext.args = '--genotype'
+        ext.args   = '--genotype'
         publishDir = [
             path: { "${params.outdir}/genetic/vireo/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
@@ -71,7 +71,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/genetic/vireo/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
@@ -80,16 +80,16 @@ process {
             path: { "${params.outdir}/genetic/popscle/dscpileup/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_intermediates
+            enabled: params.save_intermediates,
         ]
     }
 
     withName: POPSCLE_DEMUXLET {
-        ext.args = '--field GT'
+        ext.args   = '--field GT'
         publishDir = [
             path: { "${params.outdir}/genetic/popscle/demuxlet/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
@@ -97,7 +97,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/genetic/popscle/freemuxlet/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
@@ -106,7 +106,7 @@ process {
             path: { "${params.outdir}/hashing/mtxconvert/rna/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_intermediates
+            enabled: params.save_intermediates,
         ]
     }
 
@@ -115,15 +115,29 @@ process {
             path: { "${params.outdir}/hashing/mtxconvert/hto/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_intermediates
+            enabled: params.save_intermediates,
         ]
     }
 
     withName: DEMUXEM {
+        ext.args   = {
+            [
+                "--alpha-on-samples",
+                params.demuxem_alpha_on_samples,
+                "--min-num-genes",
+                params.demuxem_min_num_genes,
+                "--min-num-umis",
+                params.demuxem_min_num_umis,
+                "--min-signal-hashtag",
+                params.demuxem_min_signal_hashtag,
+                "--random-state",
+                params.demuxem_random_state,
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/hashing/demuxem/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
@@ -131,7 +145,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/hashing/gmm-demux/${meta.id}" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
     }
 
