--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,14 @@ params {
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
     igenomes_ignore            = false
 
+    // demuxEM
+    demuxem_alpha_on_samples   = 0.0
+    demuxem_min_num_genes      = 100
+    demuxem_min_num_umis       = 100
+    demuxem_min_signal_hashtag = 10
+    demuxem_random_state       = 0
+    demuxem_gender_genes       = ""
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
