Add GMM-demux optional params

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,11 @@ params {
     demuxem_random_state       = 0
     demuxem_gender_genes       = ""
 
+    // GMM-Demux
+    gmmdemux_extract           = null
+    gmmdemux_threshold         = 0.8
+    gmmdemux_random_state      = 0
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
