--- a/conf/modules.config
+++ b/conf/modules.config
@@ -142,6 +142,14 @@ process {
     }
 
     withName: GMMDEMUX {
+        ext.args   = {
+            ((params.gmmdemux_extract ? ["--extract", params.gmmdemux_extract] : []) + [
+                "--threshold",
+                params.gmmdemux_threshold,
+                "--random_seed",
+                params.gmmdemux_random_state,
+            ]).join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/hashing/gmm-demux/${meta.id}" },
             mode: params.publish_dir_mode,
