Add cellSNP optional parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -59,7 +59,28 @@ process {
     }
 
     withName: CELLSNP_MODEA {
-        ext.args   = '--genotype'
+        ext.args   = {
+            [
+                "--genotype",
+                "--cellTAG",
+                params.cellsnp_celltag,
+                "--UMItag",
+                params.cellsnp_umitag,
+                "--minCOUNT",
+                params.cellsnp_mincount,
+                "--minMAF",
+                params.cellsnp_minmaf,
+                params.cellsnp_inclflag ? "--inclFLAG ${params.cellsnp_inclflag}" : "",
+                params.cellsnp_exclflag ? "--exclFLAG ${params.cellsnp_exclflag}" : "",
+                "--minLEN",
+                params.cellsnp_minlen,
+                "--minMAPQ",
+                params.cellsnp_minmapq,
+                "--maxDEPTH",
+                params.cellsnp_maxdepth,
+                params.cellsnp_countorphan ? "--countORPHAN" : "",
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/genetic/vireo/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -143,12 +164,13 @@ process {
 
     withName: GMMDEMUX {
         ext.args   = {
-            ((params.gmmdemux_extract ? ["--extract", params.gmmdemux_extract] : []) + [
+            [
                 "--threshold",
                 params.gmmdemux_threshold,
                 "--random_seed",
                 params.gmmdemux_random_state,
-            ]).join(" ")
+                params.gmmdemux_extract ? "--extract ${params.gmmdemux_extract}" : "",
+            ].join(" ")
         }
         publishDir = [
             path: { "${params.outdir}/hashing/gmm-demux/${meta.id}" },
