--- a/nextflow.config
+++ b/nextflow.config
@@ -11,39 +11,51 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
-    mode                       = 'rescue'
-    match_donor                = false
-    hash_tools                 = 'gmm-demux'
-    genetic_tools              = 'vireo'
-    bam_qc                     = true
-    common_variants            = null
-    save_intermediates         = false
+    input                        = null
+    mode                         = 'rescue'
+    match_donor                  = false
+    hash_tools                   = 'gmm-demux'
+    genetic_tools                = 'vireo'
+    bam_qc                       = true
+    common_variants              = null
+    save_intermediates           = false
 
     // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    genome                       = null
+    igenomes_base                = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore              = false
 
     // demuxEM
-    demuxem_alpha_on_samples   = 0.0
-    demuxem_min_num_genes      = 100
-    demuxem_min_num_umis       = 100
-    demuxem_min_signal_hashtag = 10
-    demuxem_random_state       = 0
-    demuxem_gender_genes       = ""
+    demuxem_alpha_on_samples     = 0.0
+    demuxem_min_num_genes        = 100
+    demuxem_min_num_umis         = 100
+    demuxem_min_signal_hashtag   = 10
+    demuxem_random_state         = 0
+    demuxem_gender_genes         = ""
 
     // GMM-Demux
-    gmmdemux_extract           = null
-    gmmdemux_threshold         = 0.8
-    gmmdemux_random_state      = 0
+    gmmdemux_extract             = null
+    gmmdemux_threshold           = 0.8
+    gmmdemux_random_state        = 0
+
+    // CellSNP
+    cellsnp_celltag              = 'CB'
+    cellsnp_umitag               = 'Auto'
+    cellsnp_mincount             = 20
+    cellsnp_minmaf               = 0.0
+    cellsnp_inclflag             = ""
+    cellsnp_exclflag             = ""
+    cellsnp_minlen               = 30
+    cellsnp_minmapq              = 20
+    cellsnp_maxdepth             = 0
+    cellsnp_countorphan          = false
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
+    multiqc_config               = null
+    multiqc_title                = null
+    multiqc_logo                 = null
+    max_multiqc_email_size       = '25.MB'
+    multiqc_methods_description  = null
 
     // Boilerplate options
     outdir                       = null
@@ -58,17 +70,18 @@ params {
     show_hidden                  = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
-    config_profile_name        = null
-    config_profile_description = null
+    trace_report_suffix          = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
+    // Config options
+    config_profile_name          = null
+    config_profile_description   = null
 
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
+    custom_config_version        = 'master'
+    custom_config_base           = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact       = null
+    config_profile_url           = null
 
     // Schema validation default options
-    validate_params            = true
+    validate_params              = true
 }
 
 // Load base.config by default for all pipelines
@@ -76,90 +89,90 @@ includeConfig 'conf/base.config'
 
 profiles {
     debug {
-        dumpHashes              = true
-        process.beforeScript    = 'echo $HOSTNAME'
-        cleanup                 = false
+        dumpHashes                                   = true
+        process.beforeScript                         = 'echo $HOSTNAME'
+        cleanup                                      = false
         nextflow.enable.configProcessNamesValidation = true
     }
     conda {
-        conda.enabled           = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        conda.channels          = ['conda-forge', 'bioconda']
-        apptainer.enabled       = false
+        conda.enabled        = true
+        docker.enabled       = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        shifter.enabled      = false
+        charliecloud.enabled = false
+        conda.channels       = ['conda-forge', 'bioconda']
+        apptainer.enabled    = false
     }
     mamba {
-        conda.enabled           = true
-        conda.useMamba          = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
+        conda.enabled        = true
+        conda.useMamba       = true
+        docker.enabled       = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        shifter.enabled      = false
+        charliecloud.enabled = false
+        apptainer.enabled    = false
     }
     docker {
-        docker.enabled          = true
-        conda.enabled           = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-        docker.runOptions       = '-u $(id -u):$(id -g)'
+        docker.enabled       = true
+        conda.enabled        = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        shifter.enabled      = false
+        charliecloud.enabled = false
+        apptainer.enabled    = false
+        docker.runOptions    = '-u $(id -u):$(id -g)'
     }
     arm {
-        docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
+        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
     singularity {
-        singularity.enabled     = true
-        singularity.autoMounts  = true
-        conda.enabled           = false
-        docker.enabled          = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
+        singularity.enabled    = true
+        singularity.autoMounts = true
+        conda.enabled          = false
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
     }
     podman {
-        podman.enabled          = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
+        podman.enabled       = true
+        conda.enabled        = false
+        docker.enabled       = false
+        singularity.enabled  = false
+        shifter.enabled      = false
+        charliecloud.enabled = false
+        apptainer.enabled    = false
     }
     shifter {
-        shifter.enabled         = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
+        shifter.enabled      = true
+        conda.enabled        = false
+        docker.enabled       = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        charliecloud.enabled = false
+        apptainer.enabled    = false
     }
     charliecloud {
-        charliecloud.enabled    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        apptainer.enabled       = false
+        charliecloud.enabled = true
+        conda.enabled        = false
+        docker.enabled       = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        shifter.enabled      = false
+        apptainer.enabled    = false
     }
     apptainer {
-        apptainer.enabled       = true
-        apptainer.autoMounts    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
+        apptainer.enabled    = true
+        apptainer.autoMounts = true
+        conda.enabled        = false
+        docker.enabled       = false
+        singularity.enabled  = false
+        podman.enabled       = false
+        shifter.enabled      = false
+        charliecloud.enabled = false
     }
     wave {
         apptainer.ociAutoPull   = true
@@ -169,24 +182,28 @@ profiles {
         wave.strategy           = 'conda,container'
     }
     gitpod {
-        executor.name           = 'local'
-        executor.cpus           = 4
-        executor.memory         = 8.GB
+        executor.name   = 'local'
+        executor.cpus   = 4
+        executor.memory = 8.GB
         process {
             resourceLimits = [
                 memory: 8.GB,
-                cpus  : 4,
-                time  : 1.h
+                cpus: 4,
+                time: 1.h,
             ]
         }
     }
     gpu {
-        docker.runOptions       = '-u $(id -u):$(id -g) --gpus all'
-        apptainer.runOptions    = '--nv'
-        singularity.runOptions  = '--nv'
+        docker.runOptions      = '-u $(id -u):$(id -g) --gpus all'
+        apptainer.runOptions   = '--nv'
+        singularity.runOptions = '--nv'
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test {
+        includeConfig 'conf/test.config'
+    }
+    test_full {
+        includeConfig 'conf/test_full.config'
+    }
 }
 
 // Load nf-core custom profiles from different institutions
@@ -203,10 +220,10 @@ includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !pa
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
 // Set to your registry if you have a mirror of containers
-apptainer.registry    = 'quay.io'
-docker.registry       = 'quay.io'
-podman.registry       = 'quay.io'
-singularity.registry  = 'quay.io'
+apptainer.registry = 'quay.io'
+docker.registry = 'quay.io'
+podman.registry = 'quay.io'
+singularity.registry = 'quay.io'
 charliecloud.registry = 'quay.io'
 
 // Load igenomes.config if required
@@ -226,11 +243,11 @@ env {
 // Set bash options
 process.shell = [
     "bash",
-    "-C",         // No clobber - prevent output redirection from overwriting files.
-    "-e",         // Exit if a tool returns a non-zero status/exit code
-    "-u",         // Treat unset variables and parameters as an error
-    "-o",         // Returns the status of the last command to exit..
-    "pipefail"    //   ..with a non-zero status or zero if all successfully execute
+    "-C",
+    "-e",
+    "-u",
+    "-o",
+    "pipefail",
 ]
 
 // Disable process selector warnings by default. Use debug profile to enable warnings.
@@ -255,17 +272,17 @@ dag {
 
 manifest {
     name            = 'nf-core/hadge'
-    author          = """Fabiola Curion""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
+    author          = """Fabiola Curion"""
+    // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
             name: 'Fabiola Curion',
             affiliation: '',
             email: '',
             github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
-        ],
+            contribution: [],
+            orcid: '',
+        ]
     ]
     homePage        = 'https://github.com/nf-core/hadge'
     description     = """Comprehensive pipeline for donor demultiplexing in single cell"""
@@ -278,18 +295,18 @@ manifest {
 
 // Nextflow plugins
 plugins {
-    id 'nf-schema@2.3.0' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+    id 'nf-schema@2.3.0'
 }
 
 validation {
     defaultIgnoreParams = ["genomes"]
-    monochromeLogs = params.monochrome_logs
+    monochromeLogs      = params.monochrome_logs
     help {
-        enabled = true
-        command = "nextflow run nf-core/hadge -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
-        fullParameter = "help_full"
+        enabled             = true
+        command             = "nextflow run nf-core/hadge -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
+        fullParameter       = "help_full"
         showHiddenParameter = "show_hidden"
-        beforeText = """
+        beforeText          = """
 -\033[2m----------------------------------------------------\033[0m-
                                         \033[0;32m,--.\033[0;30m/\033[0;32m,-.\033[0m
 \033[0;34m        ___     __   __   __   ___     \033[0;32m/,-._.--~\'\033[0m
@@ -299,7 +316,7 @@ validation {
 \033[0;35m  nf-core/hadge ${manifest.version}\033[0m
 -\033[2m----------------------------------------------------\033[0m-
 """
-        afterText = """${manifest.doi ? "\n* The pipeline\n" : ""}${manifest.doi.tokenize(",").collect { "    https://doi.org/${it.trim().replace('https://doi.org/','')}"}.join("\n")}${manifest.doi ? "\n" : ""}
+        afterText           = """${manifest.doi ? "\n* The pipeline\n" : ""}${manifest.doi.tokenize(",").collect { "    https://doi.org/${it.trim().replace('https://doi.org/', '')}" }.join("\n")}${manifest.doi ? "\n" : ""}
 * The nf-core framework
     https://doi.org/10.1038/s41587-020-0439-x
 
@@ -309,7 +326,7 @@ validation {
     }
     summary {
         beforeText = validation.help.beforeText
-        afterText = validation.help.afterText
+        afterText  = validation.help.afterText
     }
 }
 
