Add vireo optional params

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -89,6 +89,26 @@ process {
     }
 
     withName: VIREO {
+        ext.args   = {
+            [
+                "--genoTag",
+                params.vireo_genotag,
+                params.vireo_no_doublet ? "--noDoublet" : "",
+                "--nInit",
+                params.vireo_n_init,
+                "--extraDonor",
+                params.vireo_extra_donor,
+                "--extraDonorMode",
+                params.vireo_extra_donor_mode,
+                params.vireo_force_learn_gt ? "--forceLearnGT" : "",
+                params.vireo_ase_mode ? "--ASEmode" : "",
+                params.vireo_no_plot ? "--noPlot" : "",
+                "--randSeed",
+                params.vireo_rand_seed,
+                params.vireo_cell_range != "all" ? "--cellRange ${params.vireo_cell_range}" : "",
+                params.vireo_cell_ambient_rnas ? "--callAmbientRNAs" : "",
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/genetic/vireo/${meta.id}" },
             mode: params.publish_dir_mode,
