--- a/nextflow.config
+++ b/nextflow.config
@@ -50,6 +50,19 @@ params {
     cellsnp_maxdepth             = 0
     cellsnp_countorphan          = false
 
+    // Vireo
+    vireo_genotag                = 'GT'
+    vireo_no_doublet             = false
+    vireo_n_init                 = 50
+    vireo_extra_donor            = 0
+    vireo_extra_donor_mode       = 'distance'
+    vireo_force_learn_gt         = false
+    vireo_ase_mode               = false
+    vireo_no_plot                = false
+    vireo_rand_seed              = 0
+    vireo_cell_range             = 'all'
+    vireo_cell_ambient_rnas      = false
+
     // MultiQC options
     multiqc_config               = null
     multiqc_title                = null
