Add popscle-dscpileup optional parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -117,6 +117,30 @@ process {
     }
 
     withName: POPSCLE_DSCPILEUP {
+        ext.args   = {
+            [
+                "--tag-group",
+                params.dsc_pileup_tag_group,
+                "--tag-UMI",
+                params.dsc_pileup_tag_umi,
+                "--cap-BQ",
+                params.dsc_pileup_cap_bq,
+                "--min-BQ",
+                params.dsc_pileup_min_bq,
+                "--min-MQ",
+                params.dsc_pileup_min_mq,
+                "--min-TD",
+                params.dsc_pileup_min_td,
+                "--excl-flag",
+                params.dsc_pileup_excl_flag,
+                "--min-total",
+                params.dsc_pileup_min_total,
+                "--min-uniq",
+                params.dsc_pileup_min_uniq,
+                "--min-snp",
+                params.dsc_pileup_min_snp,
+            ].join(" ")
+        }
         publishDir = [
             path: { "${params.outdir}/genetic/popscle/dscpileup/${meta.id}" },
             mode: params.publish_dir_mode,
