--- a/nextflow.config
+++ b/nextflow.config
@@ -63,6 +63,18 @@ params {
     vireo_cell_range             = 'all'
     vireo_cell_ambient_rnas      = false
 
+    // DSC-Pileup
+    dsc_pileup_tag_group         = 'CB'
+    dsc_pileup_tag_umi           = 'UB'
+    dsc_pileup_cap_bq            = 40
+    dsc_pileup_min_bq            = 13
+    dsc_pileup_min_mq            = 20
+    dsc_pileup_min_td            = 0
+    dsc_pileup_excl_flag         = 3844
+    dsc_pileup_min_total         = 0
+    dsc_pileup_min_uniq          = 0
+    dsc_pileup_min_snp           = 0
+
     // MultiQC options
     multiqc_config               = null
     multiqc_title                = null
